[package]
name = "gw2YamlGenerator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
governor = "0.6.3"
nonzero_ext = "0.3.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.30"
strum = "0.26.2"
strum_macros = "0.26.4"
